# pyspline

./: .gitignore  CMakeLists.txt  README.md  setup.py
pyspline/: __init__.py
src/f2py/: importTest.py
